--- a/Build an NLP in Cloud9 with Python/Makefile
+++ b/Build an NLP in Cloud9 with Python/Makefile
@@ -1,12 +1,13 @@
 install:
 		pip install	--upgrade pip && \
 			pip install -r requirements.txt
+		python -m textblob.download_corpora
 
 test:
 		python -m pytest -vv --cov=hello test_hello.py
 
 format: 
-		black *.py
+		python -m black nlplogic 
 
 lint: 
 		pylint --disable=R,C hello.py
