--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       run: make -f 'Build an NLP in Cloud9 with Python/Makefile'
     - name: Install dependencies
       run: |
-        make install
+        make install -f 'Build an NLP in Cloud9 with Python/requirements.txt'
     - name: Lint with pylint
       run: |
         make lint
