--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,12 @@ jobs:
     - name: Install dependencies
       run: |
         make install -f 'Build an NLP in Cloud9 with Python/requirements.txt'
-    - name: Lint with pylint
-      run: |
-        make lint
-    - name: Test with pytest
-      run: |
-        make test
-    - name: Format code with python black
-      run: |
-        make format
+    # - name: Lint with pylint
+    #   run: |
+    #     make lint
+    # - name: Test with pytest
+    #   run: |
+    #     make test
+    # - name: Format code with python black
+    #   run: |
+    #     make format
