--- a/applied-data-eng-projects/Makefile
+++ b/applied-data-eng-projects/Makefile
@@ -1,1 +1,16 @@
 
+install:
+		pip install	--upgrade pip && \
+			pip install -r requirements.txt
+	
+
+# test:
+# 		python -m pytest -vv --cov=wikiphrases --cov=nlplogic test_corenlp.py 
+
+# format: 
+# 		python -m black nlplogic 
+
+# lint: 
+# 		python -m pylint --recursive=y --disable=R,C wikiphrases.py test_corenlp.py
+
+# all: install lint test format
